--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               ></div>
             </div>
             <div class="group">
-              <a href="#">Carriers</a>
+              <a href="#">Careers</a>
               <div
                 class="mx-2 group-hover:border-b group-hover:border-blue-50"
               ></div>
@@ -69,7 +69,7 @@
         <!-- Mobile menu -->
         <div id="menu" class="absolute top-0 bottom-0 left-0 hidden flex-col w-full min-h-screen py-1 pt-40 pl-12 space-y-4 text-lg text-white uppercase bg-black md:hidden">
           <a href="#" class="hover:text-pink-500">About</a>
-          <a href="#" class="hover:text-pink-500">Carriers</a>
+          <a href="#" class="hover:text-pink-500">Careers</a>
           <a href="#" class="hover:text-pink-500">Events</a>
           <a href="#" class="hover:text-pink-500">Products</a>
           <a href="#" class="hover:text-pink-500">Support</a>
@@ -78,7 +78,7 @@
         <div
           class="max-w-lg mt-32 p-4 font-sans text-4xl text-white uppercase my-32 border-2 md:p-10 md:mx-0 md:text-6xl"
         >
-          Impressive Experience That Deliver
+          Impressive Experiences That Deliver
         </div>
       </div>
     </section>
@@ -251,7 +251,7 @@
               </div>
               <!-- Item 2 -->
               <div class="h-10 group">
-                <a href="#">Carriers</a>
+                <a href="#">Careers</a>
                 <div class="group-hover:border-b group-hover:border-blue-50"></div>
               </div>
               <!-- Item 3 -->
